# adn-wd-ai-hackathon

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
demos/autogen/idea-to-issue-agents/: copilot.py  test_copilot.py
samples/: 01_semantic_kernel_basic_agent.ipynb  02_semantic_kernel_research_agent.ipynb  03_flock.ipynb
