[project]
name = "adn-cloud-native-and-ai-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "autogen-ext[azure,openai,web-surfer]>=0.4.7",
    "azure-ai-inference>=1.0.0b9",
    "beautifulsoup4>=4.13.3",
    "duckduckgo-search>=7.5.0",
    "flock-core[tools]>=0.3.11",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "markdownify>=1.0.0",
    "matplotlib>=3.10.0",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "pypdf>=5.3.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "semantic-kernel>=1.21.3",
]
